# QML

Basics/content/: Screen01.ui.qml
Clock/: CMakeLists.txt  main.cpp  main.qml
Dashboard/: CMakeLists.txt  main.cpp
FormComponent/: CMakeLists.txt  main.cpp  main.qml
Notes/: CMakeLists.txt  main.cpp  main.qml
Notes/UI/: LoginScreen.qml
OpenCVRecorder/: Audio.qml  CMakeLists.txt
OpenCVRecorder/Recordings/: record_0002.m4a
OpenCVRecorder/qml/: resources.qrc
OpenCVRecorder/src/: audiorecorder.cpp  main.cpp  videorecorder.cpp
Recorder/: CMakeLists.txt  main.cpp
Recorder/Recordings/: record_0001.m4a  record_0002.m4a  record_0003.m4a  video_2024-08-28T06-17-09-448Z.mp4.m4a
Recorder/qml/: Main.qml  VideoDisplay.qml
Recorder/src/: audiorecorder.cpp  audiorecorder.h  main.cpp  videorecorder.h
qml_basics/: CMakeLists.txt  main.cpp
qt_images/: CMakeLists.txt  main.cpp
untitled4/: CMakeLists.txt  main.cpp
